fix: z-index

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,4 @@
 .header {
-  position: relative;
-  z-index: 10;
 }
 
 .header__item {
@@ -159,17 +157,13 @@
 
 @media screen and (max-width: 710px) {
   .header {
-    margin: 0 auto;
-    height: 100%;
+    /*включить*/
     left: 40px;
     right: 40px;
-  }
-
-  .header {
-    /*включить*/
     position: fixed;
     margin: 0 auto;
-    height: 100%;
+    height: 55px;
+    z-index: 100;
   }
 
   .header__border {
