--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -106,22 +106,44 @@
 }
 
 .news-card__date {
-
+  font-family: Source Sans Pro, monospace;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #B6BCBF;
 }
-.news-card__link {
 
+.news-card__link {
+  color: #1A1B22;
+  text-decoration: none;
 }
 
 .news-card__title {
+  font-family: Roboto Slab, monospace;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 30px;
 
 }
 
 .news-card__content {
-
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
 }
 
-news-card__source {
-  
+.news-card__source {
+  font-family: Roboto Slab, monospace;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+  color: #B6BCBF;
 }
 
 
